--- a/index.html
+++ b/index.html
@@ -250,6 +250,37 @@
       line-height: 1.4;
     }
 
+
+    .audio-controls {
+      display: flex;
+      justify-content: center;
+    }
+
+    #audioToggle {
+      position: fixed;
+      bottom: 15px;
+      right: 50%;
+      transform: translateX(50%); 
+      z-index: 100;
+      padding: 3px 15px;
+      background: linear-gradient(45deg, #67FEBD, #FFC7FF);
+      color: white;
+      border: 2px solid #FFC7FF;
+      border-radius: 20px;
+      font-family: 'GothNerd', sans-serif;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: all 0.3s;
+      box-shadow: 0 0 15px #FFC7FF;
+    }
+
+    #audioToggle:hover {
+      background: linear-gradient(45deg, #FFC7FF, #67FEBD);
+      border: 2px solid #67FEBD;
+      box-shadow: 0 0 30px #67FEBD;
+    }
+
+
     @media (max-width: 767px) {
       .hero-content {
         padding: 10px;
@@ -376,9 +407,16 @@
     <canvas id="canvas"></canvas>
   </div>
 
+  <div class="audio-controls">
+    <button id="audioToggle">⏸️🎵</button>
+  </div>
+
+  
   <button id="rulesToggle" class="rules-toggle" aria-label="Toggle Rules Panel">
     <img src="assets/images/D20.png" alt="SETTINGS" class="toggle-img">
   </button>
+
+
 
   <div id="rulesPanel" class="rules-panel">
     <h2>Cellular Automata Rules</h2>
