made a couple styling tweaks

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       padding: 0;
     }
 
+
+
     .hero-content {
       position: relative;
       z-index: 2;
@@ -84,7 +86,7 @@
       border-image: linear-gradient(45deg, var(--AquaAura), var(--NuclearFuscia)) 1; 
       border-radius: 10px; 
       box-shadow: 0 10px 60px var(--PlasmaGlow3);
-      background: #000000a0;
+      background: #000000;
       cursor: pointer;
       touch-action: manipulation;
     }
@@ -362,7 +364,8 @@
         <li><strong>Click or tap the D20 on the bottom-right</strong> to open the controls panel</li>
         <li><strong>Use the drop down</strong> to select a preset rule set</li>
         <li><strong>Use the check-boxes</strong> to make your own rules and see what happens!</li>
-        </ul> 
+        <li><strong>Click or Tap ⏸️🎵 / ▶️🎵</strong> to play or pause the music</li>
+      </ul> 
         <h3>What is a Cellular Automaton? </h3>
         <p> Cellular automata are simple rule-based systems where:
             <ul>
@@ -399,6 +402,7 @@
             random number generation and cryptographic systems.
         </li>
         </ul>     
+        <div class="mission-text"> 🎵 Background music: "Unstable Isotopes" by me!</div>
     </div>
     </div>
   </div>
