fixed local image path for itch io

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       
       <div class="left-dropdown"><!-- LEFT DROPDOWN MENU -->
         <button class="menu-trigger" aria-label="Menu">
-          <img src="/assets/images/Niels2.png" alt="Menu" class="home-icon">
+          <img src="assets/images/Niels2.png" alt="Menu" class="home-icon">
         </button>
 
         <div class="left-menu">
